--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,9 @@
 <h1>Homepage</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<%= @posts.inspect %>
-<%= @posts.inspect %>
+<h1>Blog posts</h1>
+<p><%= @posts.inspect %></p>
+
+<h1>Skills</h1>
+<p><%= @skills.inspect %></p>
+
